review code - fix